[tool.poetry]
name = "ml-monorepo/anomaly_detection"
version = "0.1.0"
description = ""
authors = ["Mark Huang <markhng525@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.13"
snowflake-snowpark-python = "1.0.0"
protobuf = "3.20.0"
scikit-learn = "1.0.2"
scipy = "1.7.1"
cloudpickle = "2.0.0"
torch = "1.10.2"
statsmodels = "0.13.0"
matplotlib = "3.5.0"
jupyter = "1.0.0"
pytorch-tabnet = "3.1.1"
seaborn = "0.11.2"
streamlit = "1.8.1"
openai = "0.26.0"
python-dotenv = "^0.21.0"
sketch = "^0.3.3"

[tool.poetry.dev-dependencies]
autoflake = "1.4"
black = "22.3.0"
flake8 = "4.0.1"
isort = "5.10.1"
mypy = "0.961"
pandas-stubs = "1.4.2.220626"
pep8-naming = "0.13.0"
pytest = "7.1.2"

[tool.isort]
force_single_line = true
profile = "black"

# https://blog.wolt.com/engineering/2021/09/30/professional-grade-mypy-configuration/
[tool.mypy]
check_untyped_defs = true
disallow_any_unimported = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
  "sklearn.*",
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
