[tool.poetry]
name = "interview-template"
version = "0.1.0"
description = ""
authors = ["Mark Huang <markhng525@gmail.com>"]

[tool.poetry.dependencies]
numpy = "1.22.4"
pandas = "1.4.2"
python = "3.8.16"

[tool.poetry.dev-dependencies]
autoflake = "1.4"
black = "22.3.0"
flake8 = "4.0.1"
isort = "5.10.1"
mypy = "0.961"
pep8-naming = "0.13.0"
pytest = "7.1.2"

[tool.isort]
force_single_line = true
profile = "black"

# https://blog.wolt.com/engineering/2021/09/30/professional-grade-mypy-configuration/
[tool.mypy]
plugins = [
  "numpy.typing.mypy_plugin",
]
check_untyped_defs = true
disallow_any_unimported = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = []
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
